syntax = "proto3";

package profile.v1;

service ProfileService {
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc SetProfile(SetProfileRequest) returns (SetProfileResponse);
  rpc PatchProfile(PatchProfileRequest) returns (PatchProfileResponse);
}

message EmptyResponse {}

message Bio {
  bool drink = 1;
  bool smoke = 2;
  string workout = 3;
  string relationType = 4;
  string education = 5;
  repeated string interests = 6;
  repeated string photos = 7;
}

message Profile {
  string id = 1;
  string name = 2;
  string age = 3;
  string contact = 4;
  string gender = 5;
  Bio bio = 6;
}

message GetProfileRequest {
  string id = 1;
}

message GetProfileResponse {
  Profile profile = 1;
}

message SetProfileRequest {
  string name = 1;
  string age = 2;
  string contact = 3;
  string gender = 4;
  Bio bio = 5;
}

message SetProfileResponse {
  Profile profile = 1;
}

message PatchProfileRequest {
  bool drink = 1;
  bool smoke = 2;
  string workout = 3;
  string relationType = 4;
  string education = 5;
  repeated string interests = 6;
  repeated string photos = 7;
}

message PatchProfileResponse {
  Profile profile = 1;
}
